microV-de5f4296056c4ef15df78a81da21fe3c1827ac07/microV-de5f4296056c4ef15df78a81da21fe3c1827ac07/hardware/sim/TLCCS.h

/*===========================================================================

 GLOBAL USER-CALLABLE FUNCTION DECLARATIONS (Exportable Functions)

===========================================================================*/
/*===========================================================================


 Init/close


===========================================================================*/
/*---------------------------------------------------------------------------
   Function:   Initialize
   Purpose:    This function initializes the instrument driver session and
               returns an instrument handle which is used in subsequent calls.

   Input Parameters:
   ViRsrc rsrcName:           Instrument Description
   ViBoolean id_query:        Boolean to query the ID or not
   ViBoolean reset_instr:     Boolean to reset the device or not

   Output Parameters:
   ViPSession vi:             Instrument Handle
---------------------------------------------------------------------------*/
ViStatus _VI_FUNC tlccs_init (ViRsrc rsrcName, ViBoolean id_query,
                              ViBoolean reset_instr, ViPSession vi);
/*---------------------------------------------------------------------------
   Function:   Close
   Purpose:    This function close an instrument driver session.

   Input Parameters:
   ViSession vi:              Instrument Handle
---------------------------------------------------------------------------*/
ViStatus _VI_FUNC tlccs_close (ViSession vi);
/*===========================================================================


 Class: Configuration Functions.


===========================================================================*/
/*---------------------------------------------------------------------------
   Function:   Set Integration Time
   Purpose:    This function set the optical integration time in seconds.

   Input Parameters:
   ViSession vi:              Instrument Handle
   ViReal64 integrationTime:  The optical integration time.
                              Min: TLCCS_MIN_INT_TIME (1.0E-5)
                              Max: TLCCS_MAX_INT_TIME (6.0E+1)
                              Default value: 1.0E-3.
---------------------------------------------------------------------------*/
ViStatus _VI_FUNC tlccs_setIntegrationTime (ViSession vi, ViReal64 integrationTime);
/*===========================================================================


 Class: Action/Status Functions.


===========================================================================*/
/*---------------------------------------------------------------------------
   Function:   Start Scan
   Purpose:    This function triggers the the CCS to take one single scan.

   Input Parameters:
   ViSession vi:              Instrument Handle

   Note:
   The scan data can be read out with the function 'Get Scan Data'
   Use 'Get Device Status' to check the scan status.
---------------------------------------------------------------------------*/
ViStatus _VI_FUNC tlccs_startScan (ViSession vi);
/*---------------------------------------------------------------------------
   Function:   Start Extern Scan
   Purpose:    This function arms the external trigger of the CCS. A
               following low to high transition at the trigger input of the
               CCS then starts a scan.

   Input Parameters:
   ViSession vi:              Instrument Handle

   Note:
   When you issue a read command 'Get Scan Data' before the CCS was
   triggered you will get a timeout error. Use 'Get Device Status' to check
   the scan status.
---------------------------------------------------------------------------*/
ViStatus _VI_FUNC tlccs_startScanExtTrg (ViSession vi);
/*---------------------------------------------------------------------------
   Function:   Get Device Status
   Purpose:    This function returns the device status. Use macros to mask
               out single bits.

   Input Parameters:
   ViSession vi:              Instrument Handle

   Output Parameters:
   ViPInt32 deviceStatus:     The device status returned from the instrument
---------------------------------------------------------------------------*/
#define TLCCS_STATUS_SCAN_IDLE         0x0002      // CCS waits for new scan to execute
#define TLCCS_STATUS_SCAN_TRIGGERED    0x0004      // scan in progress
#define TLCCS_STATUS_SCAN_START_TRANS  0x0008      // scan starting
#define TLCCS_STATUS_SCAN_TRANSFER     0x0010      // scan is done, waiting for data transfer to PC
#define TLCCS_STATUS_WAIT_FOR_EXT_TRIG 0x0080      // same as IDLE except that external trigger is armed
ViStatus _VI_FUNC tlccs_getDeviceStatus (ViSession vi, ViPInt32 deviceStatus);
/*===========================================================================


 Class: Data Functions.


===========================================================================*/
/*---------------------------------------------------------------------------
   Function:   Get Scan Data
   Purpose:    This function reads out the processed scan data.

   Input Parameters:
   ViSession vi:              Instrument Handle

   Output Parameters:
   ViReal64 data[]:           The measurement array (TLCCS_NUM_PIXELS elements).
---------------------------------------------------------------------------*/
ViStatus _VI_FUNC tlccs_getScanData (ViSession vi, ViReal64 data[]);
/*---------------------------------------------------------------------------
   Function:   Error Message
   Purpose:    This function translates the error return value from a
               VXIplug&play instrument driver function to a user-readable
               string.

   Input Parameters:
   ViSession vi:              Instrument Handle
   ViStatus status_code:      Instrument driver error code

   Output Parameters:
   ViString message:          VISA or instrument driver Error message
---------------------------------------------------------------------------*/
ViStatus _VI_FUNC tlccs_error_message(ViSession vi, ViStatus status_code, ViString message);